--- a/lib/utils/managers/i18n_manager/translations/l10n/intl_es-ES.arb
+++ b/lib/utils/managers/i18n_manager/translations/l10n/intl_es-ES.arb
@@ -76,7 +76,7 @@
   "resultsPage8Help": "¡Eres todo/a un/a activista por el clima! Crees que para afrontar la crisis climática se necesita una acción colectiva: todos tenemos que convertirla en una prioridad. No te importaría que la UE regulara las acciones de las empresas con ese fin. A fin de cuentas, ¿para qué vale el desarrollo económico si nuestro planeta acaba siendo inhabitable?",
   "resultsPage9Help": "Haz clic en las cartas para barajar",
   "resultsPage9Text1": "En las elecciones se tratan muchos temas, pero lo que realmente",
-  "resultsPage9Text2": "Belongs With Me 🫡 (\"va conmigo\", para los menos Swifties ;)",
+  "resultsPage9Text2": "Belongs With Me 🫡",
   "resultsPage10Title": "¿Te avisamos cuando toque ir a votar?",
   "resultsPage10NopButton": "No, gracias",
   "resultsPage10YesButton": "Sí, porfiiii",
