--- a/lib/utils/managers/i18n_manager/translations/l10n/intl_es-ES.arb
+++ b/lib/utils/managers/i18n_manager/translations/l10n/intl_es-ES.arb
@@ -48,7 +48,7 @@
   "loadingResultsPageTitle1": "Estamos preparando tus resultados personalizados :)",
   "loadingResultsPageTitle2": "Tardaremos menos de los que cuesta conseguir entradas para Taylor Swift 👀 ",
   "loadingResultsPageTitle3": "Buscando \"matches\" para las listas de candidatos de {country}  🔍",
-  "loadingResultsPageTitle4": "Casi estamos,<br>una última comprobación...",
+  "loadingResultsPageTitle4": "Casi estamos, una última comprobación...",
   "@@ResultsPage": "ResultsPage",
   "resultsPage1Title": "Tienes un \"match\" y mucho más 👉👈",
   "resultsPage1Text": "A continuación te mostraremos el grupo parlamentario de la UE que es más compatible contigo y las listas de candidatos nacionales en línea con ellos para que puedas votarlas en junio en tu país. También te explicamos alguna que otra cosa más según lo que has respondido 😌",
