--- a/lib/utils/managers/i18n_manager/translations/l10n/intl_cs.arb
+++ b/lib/utils/managers/i18n_manager/translations/l10n/intl_cs.arb
@@ -48,7 +48,7 @@
   "loadingResultsPageTitle1": "Vaše výsledky jsou na cestě :)",
   "loadingResultsPageTitle2": "Bude to rychlejší než prodej lístků na Taylor Swift ",
   "loadingResultsPageTitle3": "Hledám shodu s kandidáty v {country}",
-  "loadingResultsPageTitle4": "Téměř připraveno,<br>ještě poslední kontrola...",
+  "loadingResultsPageTitle4": "Téměř připraveno, ještě poslední kontrola...",
   "@@ResultsPage": "ResultsPage",
   "resultsPage1Title": "Shoda a mnohem více",
   "resultsPage1Text": "Na následujících obrazovkách se dozvíte, s jakou skupinou v Evropském parlamentu se nejvíce ztotožňujete, naleznete odpovídající kandidáty, pro které můžete v červnu ve vaší zemi hlasovat. Na základě vašich odpovědí jsme dokonce jsme našli několik dalších zajímavostí 😌",
