--- a/lib/utils/managers/i18n_manager/translations/l10n/intl_de.arb
+++ b/lib/utils/managers/i18n_manager/translations/l10n/intl_de.arb
@@ -48,7 +48,7 @@
   "loadingResultsPageTitle1": "Deine persönlichen Ergebnisse sind auf dem Weg :)",
   "loadingResultsPageTitle2": "Das sollte schneller gehen, als Taylor Swift Karten zu bekommen 👀 ",
   "loadingResultsPageTitle3": "Wir suchen Matches mit Listen in {country}  🔍",
-  "loadingResultsPageTitle4": "Fast fertig,<br>ein letzter Check...",
+  "loadingResultsPageTitle4": "Fast fertig, ein letzter Check...",
   "@@ResultsPage": "ResultsPage",
   "resultsPage1Title": "Ein Match und viel mehr 👉👈",
   "resultsPage1Text": "Auf den nächsten Bildschirmen wirst du deine kompatibelste Gruppe im EU-Parlament entdecken und passende lokalen Listen, für die du im Juni wählen kannst. Basierend auf deinen Antworten haben wir zudem ein paar interessante Extras für dich 😌",
