--- a/lib/utils/managers/i18n_manager/translations/l10n/intl_es-ES.arb
+++ b/lib/utils/managers/i18n_manager/translations/l10n/intl_es-ES.arb
@@ -48,7 +48,7 @@
   "loadingResultsPageTitle1": "Estamos preparando tus resultados personalizados :)",
   "loadingResultsPageTitle2": "Tardaremos menos de los que cuesta conseguir entradas para Taylor Swift 👀 ",
   "loadingResultsPageTitle3": "Buscando \"matches\" para las listas de candidatos de {country}  🔍",
-  "loadingResultsPageTitle4": "Casi estamos,<br>una última comprobación...",
+  "loadingResultsPageTitle4": "Casi estamos, una última comprobación...",
   "@@ResultsPage": "ResultsPage",
   "resultsPage1Title": "Tienes un \"match\" y mucho más 👉👈",
   "resultsPage1Text": "A continuación te mostraremos el grupo parlamentario de la UE que es más compatible contigo y las listas de candidatos nacionales en línea con ellos para que puedas votarlas en junio en tu país. También te explicamos alguna que otra cosa más según lo que has respondido 😌",
@@ -76,7 +76,7 @@
   "resultsPage8Help": "¡Eres todo/a un/a activista por el clima! Crees que para afrontar la crisis climática se necesita una acción colectiva: todos tenemos que convertirla en una prioridad. No te importaría que la UE regulara las acciones de las empresas con ese fin. A fin de cuentas, ¿para qué vale el desarrollo económico si nuestro planeta acaba siendo inhabitable?",
   "resultsPage9Help": "Haz clic en las cartas para barajar",
   "resultsPage9Text1": "En las elecciones se tratan muchos temas, pero lo que realmente",
-  "resultsPage9Text2": "Belongs With Me 🫡 (\"va conmigo\", para los menos Swifties ;)",
+  "resultsPage9Text2": "Belongs With Me 🫡",
   "resultsPage10Title": "¿Te avisamos cuando toque ir a votar?",
   "resultsPage10NopButton": "No, gracias",
   "resultsPage10YesButton": "Sí, porfiiii",
