--- a/lib/utils/managers/i18n_manager/translations/l10n/intl_fr.arb
+++ b/lib/utils/managers/i18n_manager/translations/l10n/intl_fr.arb
@@ -48,7 +48,7 @@
   "loadingResultsPageTitle1": "Tes résultats personnalisés sont en route :)",
   "loadingResultsPageTitle2": "Ça devrait être plus rapide que d'obtenir des billets pour Taylor Swift 👀 ",
   "loadingResultsPageTitle3": "Recherche de matches avec les listes de candidat·es en {country} 🔍",
-  "loadingResultsPageTitle4": "Presque prêt,<br>un dernier check...",
+  "loadingResultsPageTitle4": "Presque prêt, un dernier check...",
   "@@ResultsPage": "ResultsPage",
   "resultsPage1Title": "Un match et bien plus 👉👈",
   "resultsPage1Text": "Dans les écrans suivants, tu trouveras le groupe le plus compatible avec tes idées au Parlement européen, les listes locales correspondantes dans ton pays, et nous avons même trouvé quelques infos supplémentaires à partir de tes réponses 😌",
