--- a/lib/utils/managers/i18n_manager/translations/l10n/intl_mt.arb
+++ b/lib/utils/managers/i18n_manager/translations/l10n/intl_mt.arb
@@ -48,7 +48,7 @@
   "loadingResultsPageTitle1": "Ir-riżultati personalizzati tiegħek qegħdin fi triqthom :)",
   "loadingResultsPageTitle2": "Dan għandu jkun aktar mgħaġġel milli tikseb biljetti ta' Taylor Swift 👀 ",
   "loadingResultsPageTitle3": "Tfittxija ta' logħbiet mal-listi ta' kandidati fl- {country}  🔍",
-  "loadingResultsPageTitle4": "Kważi lest,<br> l-aħħar kontroll...",
+  "loadingResultsPageTitle4": "Kważi lest, l-aħħar kontroll...",
   "@@ResultsPage": "ResultsPage",
   "resultsPage1Title": "Taqbila u ħafna aktar 👉👈",
   "resultsPage1Text": "Fl-iskrins li ġejjin ser tiskopri liem grupp tal-Parlament Ewropej hu l-aktar kompatibbli miegħek, sensiela ta’ kandidati lokali li tista’ tivvota għalihom f’pajjiżek f’Ġunju, u sibna wkoll punti oħrajn bbażati fuq it-tweġibiet tiegħek 😌",
