--- a/lib/utils/managers/i18n_manager/translations/l10n/intl_pl.arb
+++ b/lib/utils/managers/i18n_manager/translations/l10n/intl_pl.arb
@@ -48,7 +48,7 @@
   "loadingResultsPageTitle1": "Twoje spersonalizowane wyniki są w drodze :)",
   "loadingResultsPageTitle2": "Powinno być szybsze niż kupowanie biletów na Taylor Swift 👀 ",
   "loadingResultsPageTitle3": "Szukamy matchy z listami kandydatów w {country}  🔍",
-  "loadingResultsPageTitle4": "Prawie gotowe,<br>robimy jeszcze ostatnie poprawki...",
+  "loadingResultsPageTitle4": "Prawie gotowe, robimy jeszcze ostatnie poprawki...",
   "@@ResultsPage": "ResultsPage",
   "resultsPage1Title": "Match i wiele więcej 👉👈",
   "resultsPage1Text": "Na następnych ekranach odkryjesz najbliższą Ci grupę w Parlamencie Europejskim i pasujące lokalne listy do głosowania w czerwcu w Twoim kraju. Będzie też kilka dodatkowych rzeczy, które stworzyliśmy na podstawie Twoich odpowiedzi 😌",
