--- a/lib/utils/managers/i18n_manager/translations/l10n/intl_pt-PT.arb
+++ b/lib/utils/managers/i18n_manager/translations/l10n/intl_pt-PT.arb
@@ -48,7 +48,7 @@
   "loadingResultsPageTitle1": "Os seus resultados personalizados estão a caminho :)",
   "loadingResultsPageTitle2": "Isto será mais rápido que conseguir ingressos para Taylor Swift 👀",
   "loadingResultsPageTitle3": "Encontrando matches com as listas de candidatos na/no {country} 🔍",
-  "loadingResultsPageTitle4": "Quase pronto, <br>uma última verificação...",
+  "loadingResultsPageTitle4": "Quase pronto, uma última verificação...",
   "@@ResultsPage": "ResultsPage",
   "resultsPage1Title": "Um match e muito mais 👉👈",
   "resultsPage1Text": "Nos ecrãs seguintes, você descobrirá o seu grupo mais compatível no Parlamento da UE, as listas locais correspondentes para votar em junho no seu país, e até encontramos algumas coisas extras com base nas suas respostas 😌",
