--- a/lib/utils/managers/i18n_manager/translations/l10n/intl_ro.arb
+++ b/lib/utils/managers/i18n_manager/translations/l10n/intl_ro.arb
@@ -48,7 +48,7 @@
   "loadingResultsPageTitle1": "Rezultatele tale personalizate vor ajunge la tine imediat :)",
   "loadingResultsPageTitle2": "O să meargă mai repede decât să încerci să iei bilete la Taylor Swift 👀 ",
   "loadingResultsPageTitle3": "Căutăm potriviri cu candidații de pe listele în {country} 🔎",
-  "loadingResultsPageTitle4": "Aproape gata, <br> verificăm încă odată...",
+  "loadingResultsPageTitle4": "Aproape gata, verificăm încă odată...",
   "@@ResultsPage": "ResultsPage",
   "resultsPage1Title": "O potrivire și chiar mai mult de atât 👉👈",
   "resultsPage1Text": "Pe următoarele pagini, vei descoperi grupul parlamentar european, lista locală corespunzătoare de candidați cu care poți vota în iunie în țara ta și cu care ești cel/cea/cei mai compatibil/ă/x, și am găsit chiar și câteva lucruri în plus în baza răspunsurilor tale  😌",
