--- a/lib/utils/managers/i18n_manager/translations/l10n/intl_bg.arb
+++ b/lib/utils/managers/i18n_manager/translations/l10n/intl_bg.arb
@@ -19,7 +19,7 @@
   "languagePageSubtitle": "Това може да бъде променено по-късно в настройките.",
   "@@Entrance": "EntrancePage",
   "entranceTitle1": "Ако този симпатичен гълъб не ви помогне да гласувате през юни, нищо няма да ви помогне.",
-  "entranceTitle2": "Swipe your opinion on topics that matter to you.",
+  "entranceTitle2": "Прелиствайте мнението си по важни за вас теми.",
   "entranceTitle3": "Намери си съвпадение с вижданията ти и виж за кого да гласуваш.",
   "entranceMatchesFoundQuote": "{count} Съвпадения намерени през последните 24ч",
   "entranceStartButton": "Старт Palumba",
@@ -55,51 +55,51 @@
   "resultsPage1Button": "Натиснете, за да продължите",
   "resultsPage2_1Title": "Честно, между",
   "resultsPage2_2Title": "и мен, е нещо като Love story (EU's Version)",
-  "resultsPage3Title": "How close I am to European Parliament Groups",
-  "resultsPage4TitleTop": "Pro-EU Integration",
-  "resultsPage4TitleBottom": "Anti-EU Integration",
-  "resultsPage4TitleLeft": "Left",
-  "resultsPage4TitleRight": "Right",
+  "resultsPage3Title": "Колко близко съм до дадени Европейски парламентарни групи",
+  "resultsPage4TitleTop": "Про-ЕС интеграция",
+  "resultsPage4TitleBottom": "Анти-ЕС интеграция",
+  "resultsPage4TitleLeft": "Ляво",
+  "resultsPage4TitleRight": "Дясно",
   "resultsPage4TitleUserHere": "It’s me, hi!",
-  "resultsPage5Title": "On more specific topics, which European Parliament Group am I closer to?",
-  "resultsPage5Topic1": "Environmental issues",
-  "resultsPage5Topic2": "Human & Social Rights",
-  "resultsPage5Topic3": "Economic intervention",
-  "resultsPage6_1Title": "Ok, it's cool knowing which group gets me...",
-  "resultsPage6_2Title": "But at the EU Elections, we vote for a local list",
-  "resultsPage6Text": "In the next screens, you’ll discover the candidate lists in your country  that are most likely to join your match.",
-  "resultsPage7Title": "The candidates in {country} most aligned with {group}",
-  "resultsPage7Disclaimer": "In no particular order.",
-  "resultsPage7NoLocalCandidates": "No local parties found in {country}",
-  "resultsPage8_1Text": "On {topic}, you’re {percentage}% more into",
-  "resultsPage8_2Text": "Active Climate Action 🌱😌",
-  "resultsPage8Help": "You are a climate change fighter! You believe that tackling the climate crisis requires collective action, with everyone making it a top priority. You do not mind the EU regulating companies to that end. After all, what use is economic growth if the planet becomes inhabitable?",
-  "resultsPage9Help": "Click on the cards to shuffle",
-  "resultsPage9Text1": "Elections are about many topics, but there’s one thing that really",
-  "resultsPage9Text2": "Belongs With Me 🫡",
-  "resultsPage10Title": "A notification when it’s time to go vote?",
-  "resultsPage10NopButton": "No thanks!",
-  "resultsPage10YesButton": "Yesssss",
-  "resultsShare": "Share",
+  "resultsPage5Title": "По по-специфични теми - към коя група в Европейския парламент съм по-близо?",
+  "resultsPage5Topic1": "Екологични проблеми",
+  "resultsPage5Topic2": "Човешки и социални права",
+  "resultsPage5Topic3": "Икономическа интервенция",
+  "resultsPage6_1Title": "Добре, готино е да знаеш коя група те разбира...",
+  "resultsPage6_2Title": "Но на европейските избори гласуваме за местна листа",
+  "resultsPage6Text": "В следващите екрани ще откриете списъците с кандидати във вашата страна, които е най-вероятно да се присъединят към вашето съвпадение.",
+  "resultsPage7Title": "Кандидатите в{country}, които най-много се придържат към {group}",
+  "resultsPage7Disclaimer": "Без определен ред.",
+  "resultsPage7NoLocalCandidates": "Не са намерени местни партии в {country}",
+  "resultsPage8_1Text": "На {topic} вие сте {percentage} повече към",
+  "resultsPage8_2Text": "Активни действия по отношение на климата",
+  "resultsPage8Help": "Вие сте борец срещу климатичните проблеми! Вярвате, че справянето с кризата с климата изисква колективни действия, които да се превърнат в основен приоритет за всички. Нямате нищо против ЕС да регулира компаниите за тази цел. В края на краищата, каква е ползата от икономическия растеж, ако планетата стане необитаема?",
+  "resultsPage9Help": "Кликнете върху картите, за да ги разбъркате",
+  "resultsPage9Text1": "Изборите са свързани с много теми, но има едно нещо, което наистина",
+  "resultsPage9Text2": "Принадлежи на мен",
+  "resultsPage10Title": "Уведомление, когато е време да отидете да гласувате?",
+  "resultsPage10NopButton": "Не, благодаря!",
+  "resultsPage10YesButton": "Дааааа",
+  "resultsShare": "Споделяне",
   "@HomePage": "HomePage",
-  "homePageMatchesFoundQuote": "{count} matches found in the last 24h",
-  "homePageBackToTest": "Back to the test",
-  "homePageMyResults": "My results",
-  "homePageStartButton": "Start a new test",
+  "homePageMatchesFoundQuote": "{count} съвпадения намерени в последните 24ч",
+  "homePageBackToTest": "Обратно към теста",
+  "homePageMyResults": "Моите резултати",
+  "homePageStartButton": "Започни нов тест",
   "@@SettingsPage": "SettingsPage",
-  "settingsPageTitleLanguage": "Language",
-  "settingsPageSubtitleLanguage": "I prefer to use this app in",
-  "settingsPageTextLanguage": "To change the language, click on the current one",
-  "settingsPageTitleAbout": "About",
-  "settingsPageTextAbout": "Palumba is not a company, not a political party, not a government. We’re an independent non-profit association of 120+ young people 🐦 from all over Europe who got together last summer and started crafting this app. We have one goal: helping you understand better how the European Elections work and which candidate lists could match your ideas, so you can vote more confidently for people who support your priorities. Our algorithm is open-source, the statements you swipe on were reviewed by political scientists, and your data is sooo encrypted that we have no way to ever identify you :)",
-  "settingsPageTitleAssociation": "The association",
-  "settingsPageTitlePartners": "Partners",
-  "settingsPageTextPartners": "Important to tell you that partners have no editorial power on the content of the app, which remains a non-partisan initiative with a clear goal: helping you understand who supports your opinions at the european and national levels.",
-  "settingsPageSubtitle1": "Main Sponsors",
-  "settingsPageSubtitle2": "European Partners",
-  "settingsPageSubtitle3": "Academic Partner",
-  "settingsPageSubtitle4": "National Institutional Partners",
-  "settingsPageSubtitle5": "Service Providers",
-  "settingsPageShareButtonText": "Share",
-  "settingsPagePrivacyPolicy": "Data Protection"
+  "settingsPageTitleLanguage": "Език",
+  "settingsPageSubtitleLanguage": "Предпочитам да използвам приложението в",
+  "settingsPageTextLanguage": "За да промените езика, натиснете върху текущия език",
+  "settingsPageTitleAbout": "Относно",
+  "settingsPageTextAbout": "Palumba не е компания, не е политическа партия, не е правителство. Ние сме независимо сдружение с нестопанска цел на над 120 млади хора 🐦 от цяла Европа, които се събраха миналото лято и започнаха да създават това приложение. Имаме една цел: да ви помогнем да разберете по-добре как протичат европейските избори и кои кандидатски листи биха могли да отговарят на вашите идеи, за да можете да гласувате по-уверено за хора, които подкрепят вашите приоритети. Алгоритъмът ни е с отворен код, изявленията, върху които плъзгате пръст, са прегледани от политолози, а данните ви са толкова криптирани, че няма как да ви идентифицираме :)",
+  "settingsPageTitleAssociation": "Асоциацията",
+  "settingsPageTitlePartners": "Партньори",
+  "settingsPageTextPartners": "Важно е да ви кажем, че партньорите нямат редакционни правомощия по отношение на съдържанието на приложението, което остава непартийна инициатива с ясна цел: да ви помогне да разберете кой подкрепя вашето мнение на европейско и национално равнище.",
+  "settingsPageSubtitle1": "Главни спонсори",
+  "settingsPageSubtitle2": "Европейски партньори",
+  "settingsPageSubtitle3": "Академични партньори",
+  "settingsPageSubtitle4": "Национални институционални партньори",
+  "settingsPageSubtitle5": "Доставчици на услуги",
+  "settingsPageShareButtonText": "Споделяне",
+  "settingsPagePrivacyPolicy": "Защита на данните"
 }
