--- a/lib/utils/managers/i18n_manager/translations/l10n/intl_sl.arb
+++ b/lib/utils/managers/i18n_manager/translations/l10n/intl_sl.arb
@@ -48,7 +48,7 @@
   "loadingResultsPageTitle1": "Tvoji rezultati so na poti :)",
   "loadingResultsPageTitle2": "To bo hitreje kot dobiti vstopnice za Taylor Swift 👀 ",
   "loadingResultsPageTitle3": "Iskanje ujemanj z listami kandidatov v {country}  🔍",
-  "loadingResultsPageTitle4": "Skoraj pripravljeno,<br>še zadnji pregled ...",
+  "loadingResultsPageTitle4": "Skoraj pripravljeno, še zadnji pregled...",
   "@@ResultsPage": "ResultsPage",
   "resultsPage1Title": "En match in še veliko več 👉👈",
   "resultsPage1Text": "Na naslednjih zaslonih boste odkrili vam najbolj kompatibilno skupino v Evropskem parlamentu, sezname lokalnih kandidatov v vaši državi za evropske volitve junija in še nekaj dodatnih informacij, prilagojenih vašim odgovorom 😌",
