Change belongs with me emoji

--- a/lib/utils/managers/i18n_manager/translations/l10n/intl_bg.arb
+++ b/lib/utils/managers/i18n_manager/translations/l10n/intl_bg.arb
@@ -76,7 +76,7 @@
   "resultsPage8Help": "Вие сте борец срещу климатичните проблеми! Вярвате, че справянето с кризата с климата изисква колективни действия, които да се превърнат в основен приоритет за всички. Нямате нищо против ЕС да регулира компаниите за тази цел. В края на краищата, каква е ползата от икономическия растеж, ако планетата стане необитаема?",
   "resultsPage9Help": "Кликнете върху картите, за да ги разбъркате",
   "resultsPage9Text1": "Изборите са свързани с много теми, но има едно нещо, което наистина",
-  "resultsPage9Text2": "Принадлежи на мен",
+  "resultsPage9Text2": "Belongs With Me 😌",
   "resultsPage10Title": "Уведомление, когато е време да отидете да гласувате?",
   "resultsPage10NopButton": "Не, благодаря!",
   "resultsPage10YesButton": "Дааааа",
@@ -101,5 +101,6 @@
   "settingsPageSubtitle4": "Национални институционални партньори",
   "settingsPageSubtitle5": "Доставчици на услуги",
   "settingsPageShareButtonText": "Споделяне",
-  "settingsPagePrivacyPolicy": "Защита на данните"
+  "settingsPagePrivacyPolicy": "Защита на данните",
+  "settingsPageShareText": "If this cute pigeon can't help you vote in June, nothing will. I've used the app and you should too:"
 }
