--- a/lib/utils/managers/i18n_manager/translations/l10n/intl_ca.arb
+++ b/lib/utils/managers/i18n_manager/translations/l10n/intl_ca.arb
@@ -76,7 +76,7 @@
   "resultsPage8Help": "Ets un lluitador climàtic! Creus que donar resposta a la crisi climàtica requereix d'acció col·lectiva, amb tothom prioritzant el tema. No sap gens de greu que la UE reguli les empreses per a fer-ho possible. Al final, de què serveix el creixement econòmic si el planeta es torna inhabitable?",
   "resultsPage9Help": "Fes clic a les cartes per barrejar-les",
   "resultsPage9Text1": "Les eleccions van de molts temes, però hi ha una cosa que realment",
-  "resultsPage9Text2": "Belongs With Me 🫡",
+  "resultsPage9Text2": "Belongs With Me 😌",
   "resultsPage10Title": "Una notificació quan toqui anar a votar?",
   "resultsPage10NopButton": "Nope, gràcies!",
   "resultsPage10YesButton": "Síííííí",
@@ -101,5 +101,6 @@
   "settingsPageSubtitle4": "Socis institucionals nacionals",
   "settingsPageSubtitle5": "Proveïdors del servei",
   "settingsPageShareButtonText": "Compartir (pròximament ⏳)",
-  "settingsPagePrivacyPolicy": "Política de Privacitat"
+  "settingsPagePrivacyPolicy": "Política de Privacitat",
+  "settingsPageShareText": "If this cute pigeon can't help you vote in June, nothing will. I've used the app and you should too:"
 }
