--- a/lib/utils/managers/i18n_manager/translations/l10n/intl_hr.arb
+++ b/lib/utils/managers/i18n_manager/translations/l10n/intl_hr.arb
@@ -76,7 +76,7 @@
   "resultsPage8Help": "Pravi si borac protiv klimatskih promjena! Vjeruješ da klimatska kriza mora biti prioritet svakoga i da njezino suzbijanje zahtjeva udružene napore. Nemaš ništa protiv da EU regulira poduzeća u tu svrhu. Uostalom, kakva je korist od ekonomskog rasta ako planet postane nenastanjiv?",
   "resultsPage9Help": "Stisni na karte kako bi se promiješale",
   "resultsPage9Text1": "Izbori se tiču mnogih stvari, ali jedna stvar posebno",
-  "resultsPage9Text2": "Belongs With Me",
+  "resultsPage9Text2": "Belongs With Me 😌",
   "resultsPage10Title": "Želiš li obavijest kada je vrijeme za glasanje?",
   "resultsPage10NopButton": "Ne hvala!",
   "resultsPage10YesButton": "Daaaa",
@@ -101,5 +101,6 @@
   "settingsPageSubtitle4": "Nacionalni institucionalni partneri",
   "settingsPageSubtitle5": "Pružatelji usluga",
   "settingsPageShareButtonText": "Podijeli",
-  "settingsPagePrivacyPolicy": "Zaštita podataka"
+  "settingsPagePrivacyPolicy": "Zaštita podataka",
+  "settingsPageShareText": "If this cute pigeon can't help you vote in June, nothing will. I've used the app and you should too:"
 }
