--- a/lib/utils/managers/i18n_manager/translations/l10n/intl_it.arb
+++ b/lib/utils/managers/i18n_manager/translations/l10n/intl_it.arb
@@ -76,7 +76,7 @@
   "resultsPage8Help": "You are a climate change fighter! You believe that tackling the climate crisis requires collective action, with everyone making it a top priority. You do not mind the EU regulating companies to that end. After all, what use is economic growth if the planet becomes inhabitable?",
   "resultsPage9Help": "Clicca sulle carte per mescolare",
   "resultsPage9Text1": "Le elezioni hanno diversi argomenti, ma ce n'è uno che veramente",
-  "resultsPage9Text2": "Mi appartiene",
+  "resultsPage9Text2": "Belongs With Me 😌",
   "resultsPage10Title": "Vuoi ricevere una notifica per quando sarà tempo di andare a votare?",
   "resultsPage10NopButton": "No grazie!",
   "resultsPage10YesButton": "Sììììì",
@@ -101,5 +101,6 @@
   "settingsPageSubtitle4": "Partners Istituzionali Nazionali",
   "settingsPageSubtitle5": "Service Providers",
   "settingsPageShareButtonText": "Condividi",
-  "settingsPagePrivacyPolicy": "Protezione dati"
+  "settingsPagePrivacyPolicy": "Protezione dati",
+  "settingsPageShareText": "If this cute pigeon can't help you vote in June, nothing will. I've used the app and you should too:"
 }
