--- a/lib/utils/managers/i18n_manager/translations/l10n/intl_mt.arb
+++ b/lib/utils/managers/i18n_manager/translations/l10n/intl_mt.arb
@@ -76,7 +76,7 @@
   "resultsPage8Help": "Inti ġellied għat-tibdil fil-klima! Inti temmen li l-indirizzar tal-kriżi tal-klima teħtieġ azzjoni kollettiva, b'kulħadd jagħmilha prijorità ewlenija. Ma tiddejjaqx il-kumpaniji li jirregolaw l-UE għal dak il-għan. Wara kollox, x'jagħmel it-tkabbir ekonomiku jekk il-pjaneta ssir abitabbli?",
   "resultsPage9Help": "Ikklikkja fuq il-karti biex tħawwad",
   "resultsPage9Text1": "Elections are about many topics, but there’s one thing that really",
-  "resultsPage9Text2": "Jappartjeni Miegħi 🫡",
+  "resultsPage9Text2": "Belongs With Me 😌",
   "resultsPage10Title": "Notifika meta wasal iż-żmien li tmur tivvota?",
   "resultsPage10NopButton": "Le grazzi!",
   "resultsPage10YesButton": "Ivaaaaa",
@@ -101,5 +101,6 @@
   "settingsPageSubtitle4": "Imsieħba Istituzzjonali Nazzjonali",
   "settingsPageSubtitle5": "Fornituri tas-Servizz",
   "settingsPageShareButtonText": "Aqsam",
-  "settingsPagePrivacyPolicy": "Politika privata"
+  "settingsPagePrivacyPolicy": "Politika privata",
+  "settingsPageShareText": "If this cute pigeon can't help you vote in June, nothing will. I've used the app and you should too:"
 }
