--- a/lib/utils/managers/i18n_manager/translations/l10n/intl_nl.arb
+++ b/lib/utils/managers/i18n_manager/translations/l10n/intl_nl.arb
@@ -76,7 +76,7 @@
   "resultsPage8Help": "Jij bent een strijder tegen klimaatverandering! Jij gelooft dat het aanpakken van de klimaatcrisis gemeenschappelijke actie vereist, waarbij iedereen het een topprioriteit maakt. Jij hebt er geen probleem dat de EU hiervoor bedrijven reguleert. Wat is ook het nut van economische groei als de planeet onbewoonbaar wordt?",
   "resultsPage9Help": "Klik op de kaarten om ze te schudden",
   "resultsPage9Text1": "Verkiezingen gaan over heel veel dingen, maar er is maar one thing that really",
-  "resultsPage9Text2": "Belongs With Me 🫡",
+  "resultsPage9Text2": "Belongs With Me 😌",
   "resultsPage10Title": "Wil je een herinnering wanneer je kan stemmen?",
   "resultsPage10NopButton": "Nee dankje!",
   "resultsPage10YesButton": "Yesssss",
@@ -101,5 +101,6 @@
   "settingsPageSubtitle4": "Nationale partners",
   "settingsPageSubtitle5": "Dienstverleners",
   "settingsPageShareButtonText": "Delen",
-  "settingsPagePrivacyPolicy": "Privacybeleid"
+  "settingsPagePrivacyPolicy": "Privacybeleid",
+  "settingsPageShareText": "If this cute pigeon can't help you vote in June, nothing will. I've used the app and you should too:"
 }
