--- a/lib/utils/managers/i18n_manager/translations/l10n/intl_pt-PT.arb
+++ b/lib/utils/managers/i18n_manager/translations/l10n/intl_pt-PT.arb
@@ -76,7 +76,7 @@
   "resultsPage8Help": "Você é um combatente das mudanças climáticas! Você acredita que a resolução da crise climática exige uma acção colectiva, com todos a torná-la uma prioridade absoluta. Você não se importa com a UE regulando as empresas nesse sentido. Pois, de que serve o crescimento econômico se o planeta se tornar inabitável?",
   "resultsPage9Help": "Clique nos cartões para embaralhar",
   "resultsPage9Text1": "Eleições são sobre vários tópicos, mas há uma coisa que realmente",
-  "resultsPage9Text2": "Belongs With Me 🫡",
+  "resultsPage9Text2": "Belongs With Me 😌",
   "resultsPage10Title": "Uma notificação para quando for a hora de votar?",
   "resultsPage10NopButton": "Não, obrigado!",
   "resultsPage10YesButton": "Simmmm",
@@ -101,5 +101,6 @@
   "settingsPageSubtitle4": "Parceiros Institucionais nacionais",
   "settingsPageSubtitle5": "Prestadores de serviços",
   "settingsPageShareButtonText": "Compartilhe",
-  "settingsPagePrivacyPolicy": "Política de Privacidade"
+  "settingsPagePrivacyPolicy": "Política de Privacidade",
+  "settingsPageShareText": "If this cute pigeon can't help you vote in June, nothing will. I've used the app and you should too:"
 }
