--- a/lib/utils/managers/i18n_manager/translations/l10n/intl_ro.arb
+++ b/lib/utils/managers/i18n_manager/translations/l10n/intl_ro.arb
@@ -76,7 +76,7 @@
   "resultsPage8Help": "Ești o persoană care vrea să lupte împotriva schimbării climatice! Crezi că lupta cu schimbarea climatică necesită acțiuni la nivel de colectiv, unde toți recunoaștem că schimbarea climatică este o prioritate urgentă. Ești de acord ca UE să reglementeze companiile private în acest scop. Toate ca toate, dar care este scopul creșterii economice dacă planeta devine de nelocuit?",
   "resultsPage9Help": "Apasă pe cărți pentru a le amesteca",
   "resultsPage9Text1": "Alegerile sunt despre multe lucruri, dar există un lucru care chiar",
-  "resultsPage9Text2": "Rezonează cu mine 🫡",
+  "resultsPage9Text2": "Belongs With Me 😌",
   "resultsPage10Title": "O notificare atunci când este timpul să mergem să votăm?",
   "resultsPage10NopButton": "Nu, mulțumesc!",
   "resultsPage10YesButton": "Daaaaa",
@@ -101,5 +101,6 @@
   "settingsPageSubtitle4": "Parteneri Instituționali Naționali",
   "settingsPageSubtitle5": "Furnizori Servicii",
   "settingsPageShareButtonText": "Distribuie",
-  "settingsPagePrivacyPolicy": "Politică de confidențialitate"
+  "settingsPagePrivacyPolicy": "Politică de confidențialitate",
+  "settingsPageShareText": "If this cute pigeon can't help you vote in June, nothing will. I've used the app and you should too:"
 }
