--- a/lib/utils/managers/i18n_manager/translations/l10n/intl_sk.arb
+++ b/lib/utils/managers/i18n_manager/translations/l10n/intl_sk.arb
@@ -76,7 +76,7 @@
   "resultsPage8Help": "Ste bojovníkom proti klimatickým zmenám! Veríte, že boj proti klimatickej kríze si vyžaduje kolektívny prístup, ktorý by mal byť prioritou pre každého. Nevadí vám regulácia podnikov zo strany EÚ. Veď načo je hospodársky rast, keď sa planéta stane neobývateľnou?",
   "resultsPage9Help": "Pre zamiešanie kliknite na karty",
   "resultsPage9Text1": "Voľby sa týkajú mnohých tém, ale je tu jedna vec, ktorá naozaj",
-  "resultsPage9Text2": "Belongs With Me 🫡",
+  "resultsPage9Text2": "Belongs With Me 😌",
   "resultsPage10Title": "Upozornenie, keď bude čas ísť voliť?",
   "resultsPage10NopButton": "Nie, ďakujem!",
   "resultsPage10YesButton": "Áááno",
@@ -101,5 +101,6 @@
   "settingsPageSubtitle4": "Partneri z národných inštitúcií",
   "settingsPageSubtitle5": "Poskytovatelia služieb",
   "settingsPageShareButtonText": "Zdielať",
-  "settingsPagePrivacyPolicy": "Ochrana dát"
+  "settingsPagePrivacyPolicy": "Ochrana dát",
+  "settingsPageShareText": "If this cute pigeon can't help you vote in June, nothing will. I've used the app and you should too:"
 }
