--- a/lib/utils/managers/i18n_manager/translations/l10n/intl_nl.arb
+++ b/lib/utils/managers/i18n_manager/translations/l10n/intl_nl.arb
@@ -18,7 +18,7 @@
   "languagePageTitle": "Laten we doorgaan in het Nederlands, hè? :)",
   "languagePageSubtitle": "Dit kan later worden gewijzigd in de instellingen.",
   "@@Entrance": "EntrancePage",
-  "entranceTitle1": "Als deze leuke duif je niet kan helpen stemmen in juni, dan lukt er niks meer.",
+  "entranceTitle1": "Als deze leuke duif je niet kan helpen stemmen in juni, dan helpt niets meer.",
   "entranceTitle2": "Swipe your opinion on topics that matter to you.",
   "entranceTitle3": "Find out your match and an orientation for who to vote for at the Elections.",
   "entranceMatchesFoundQuote": "{count} matches gevonden in de afgelopen 24 uur",
@@ -43,7 +43,7 @@
   "onBoardingStep3Option5": "Anders",
   "onBoardingNotAnswerButton": "Zeg ik liever niet",
   "onBoardingCardQuestion": "Ik heb geen idee op wie ik zou stemmen bij de Europese verkiezingen 2024",
-  "onBoardingLastStepTitle": "Swipe volgens je overeenkomst",
+  "onBoardingLastStepTitle": "Swipe op basis van je voorkeur",
   "@@LoadingResultsPage": "LoadingResultsPage",
   "loadingResultsPageTitle1": "Je gepersonaliseerde resultaten zijn onderweg :)",
   "loadingResultsPageTitle2": "Dit gaat sneller dan kaartjes voor Taylor Swift scoren 👀 ",
