--- a/lib/utils/managers/i18n_manager/translations/l10n/intl_it.arb
+++ b/lib/utils/managers/i18n_manager/translations/l10n/intl_it.arb
@@ -5,7 +5,7 @@
   "ok": "Ok",
   "yes": "Sì",
   "no": "No",
-  "cancel": "Cancella",
+  "cancel": "Annulla",
   "textContinue": "Continua",
   "alertServerErrorTitle": "Ops!",
   "alertServerErrorText": "Qualcosa è andato storto. Per favore riprova più tardi.",
@@ -15,7 +15,7 @@
   "@@SplashPage": "SplashPage",
   "splashPageNoInternet": "Sembra che tu non abbia una connessione internet",
   "@@LanguagePage": "LanguagePage",
-  "languagePageTitle": "Continuiamo in inglese? :)",
+  "languagePageTitle": "Continuiamo in italiano? :)",
   "languagePageSubtitle": "Potrai cambiare in seguito nelle impostazioni.",
   "@@Entrance": "EntrancePage",
   "entranceTitle1": "Se questo piccione carino non ti aiuterà a votare a giugno, nient'altro lo farà.",
@@ -39,13 +39,13 @@
   "onBoardingStep3Option1": "Donna",
   "onBoardingStep3Option2": "Uomo",
   "onBoardingStep3Option3": "Gender fluid",
-  "onBoardingStep3Option4": "Non binario",
+  "onBoardingStep3Option4": "Genere non binario",
   "onBoardingStep3Option5": "Altro",
   "onBoardingNotAnswerButton": "Preferisco non rispondere",
   "onBoardingCardQuestion": "Non ho alcuna idea per chi votare alle Elezioni Europee 2024",
   "onBoardingLastStepTitle": "Scorri in base a quanto sei d'accordo",
   "@@LoadingResultsPage": "LoadingResultsPage",
-  "loadingResultsPageTitle1": "I tuoi risultati sono in arrivo :)",
+  "loadingResultsPageTitle1": "I tuoi risultati personalizzati sono in arrivo :)",
   "loadingResultsPageTitle2": "Dovrebbe essere più veloce che prendere dei biglietti per Taylor Swift 👀 ",
   "loadingResultsPageTitle3": "Trova gli abbinamenti con le liste candidate in {country}  🔍",
   "loadingResultsPageTitle4": "Quasi pronti, un ultimo controllo...",
@@ -56,8 +56,8 @@
   "resultsPage2_1Title": "Onestamente, tra il",
   "resultsPage2_2Title": "e me, è una Love Story (EU's Version)",
   "resultsPage3Title": "Quanto mi sono vicini i Gruppi Parlamentari Europei",
-  "resultsPage4TitleTop": "Pro Integrazione Europea",
-  "resultsPage4TitleBottom": "Contro l'Integrazione Europea",
+  "resultsPage4TitleTop": "Pro Integrazione UE",
+  "resultsPage4TitleBottom": "Contro l'Integrazione UE",
   "resultsPage4TitleLeft": "Sinistra",
   "resultsPage4TitleRight": "Destra",
   "resultsPage4TitleUserHere": "It's me, hi!",
@@ -73,7 +73,7 @@
   "resultsPage7NoLocalCandidates": "Nessun partito trovato in {country}",
   "resultsPage8_1Text": "Su {topic}, sei {percentage} in più in",
   "resultsPage8_2Text": "Azione Climatica Attiva",
-  "resultsPage8Help": "You are a climate change fighter! You believe that tackling the climate crisis requires collective action, with everyone making it a top priority. You do not mind the EU regulating companies to that end. After all, what use is economic growth if the planet becomes inhabitable?",
+  "resultsPage8Help": "Sei un* combattente per il cambiamento climatico! Credi che combattere la crisi climatica necessiti un'azione collettiva, che tutti ne facciano una priorità assoluta. Non ti importa che l'UE regoli le aziende fino in fondo. Alla fine, a cosa serve la crescita economica se il pianeta diventa inabitabile?",
   "resultsPage9Help": "Clicca sulle carte per mescolare",
   "resultsPage9Text1": "Le elezioni hanno diversi argomenti, ma ce n'è uno che veramente",
   "resultsPage9Text2": "Belongs With Me 😌",
@@ -91,10 +91,10 @@
   "settingsPageSubtitleLanguage": "Preferisco usare quest'app in",
   "settingsPageTextLanguage": "Per cambiare la lingua, premi su quella attuale",
   "settingsPageTitleAbout": "Su di noi",
-  "settingsPageTextAbout": "Palumba is not a company, not a political party, not a government. We’re an independent non-profit association of 120+ young people 🐦 from all over Europe who got together last summer and started crafting this app. We have one goal: helping you understand better how the European Elections work and which candidate lists could match your ideas, so you can vote more confidently for people who support your priorities. Our algorithm is open-source, the statements you swipe on were reviewed by political scientists, and your data is sooo encrypted that we have no way to ever identify you :)",
+  "settingsPageTextAbout": "Palumba non è una compagnia, non è un partito politico, non è un ente governativo. Siamo un'associazione no-profit indipendente con più di 120 giovani da tutta Europa che si sono riuniti la scorsa estate ed iniziato a creare l'app. Abbiamo un solo obbiettivo: aiutarti a capire meglio come funzionano le Elezioni Europee e quali candidati potrebbero essere più vicini alle tue idee, affinché tu possa votare con più sicurezza per le persone che supportano le tue priorità. Il nostro algoritmo è open-source, le dichiarazioni che voterai sono state riviste da scienziati politici, e i tuoi dati sono così criptati che non c'è modo di identificarti ;)",
   "settingsPageTitleAssociation": "L'associazione",
   "settingsPageTitlePartners": "Partners",
-  "settingsPageTextPartners": "Important to tell you that partners have no editorial power on the content of the app, which remains a non-partisan initiative with a clear goal: helping you understand who supports your opinions at the european and national levels.",
+  "settingsPageTextPartners": "È importante dirti che i partners non hanno potere editoriale sul contenuto dell'app, che rimane un'iniziativa imparziale con un obbiettivo chiaro: aiutarti a capire chi supporta le tue opinioni a livello europeo e nazionale.",
   "settingsPageSubtitle1": "Sponsor principali",
   "settingsPageSubtitle2": "Partners Europei",
   "settingsPageSubtitle3": "Partner accademico",
@@ -102,5 +102,5 @@
   "settingsPageSubtitle5": "Service Providers",
   "settingsPageShareButtonText": "Condividi",
   "settingsPagePrivacyPolicy": "Protezione dati",
-  "settingsPageShareText": "If this cute pigeon can't help you vote in June, nothing will. I've used the app and you should too:"
+  "settingsPageShareText": "Se questo simpatico piccione non ti aiuterà a votare a giugno, nient'altro lo farà. Ho usato l'app e dovresti farlo anch tu:"
 }
